grammars/noted/test/corpus/callouts.txt
==================
Note callout
==================
> [!note]
> Some content here.

---

(document
  (callout_block
    callout_type: (callout_type_name)
    (blockquote_continuation)))

==================
Callout with title
==================
> [!warning] Be careful
> This is dangerous.

---

(document
  (callout_block
    callout_type: (callout_type_name)
    (text)
    (blockquote_continuation)))

==================
Tip callout
==================
> [!tip] Pro tip
> Use keyboard shortcuts.

---

(document
  (callout_block
    callout_type: (callout_type_name)
    (text)
    (blockquote_continuation)))

==================
Callout with multiple continuation lines
==================
> [!important]
> First line.
> Second line.
> Third line.

---

(document
  (callout_block
    callout_type: (callout_type_name)
    (blockquote_continuation)
    (blockquote_continuation)
    (blockquote_continuation)))
