grammars/noted/test/corpus/checkboxes.txt
==================
Unchecked task
==================
- [ ] Buy groceries

---

(document
  (list_item
    checkbox: (checkbox)
    (text)))

==================
Checked task
==================
- [x] Write tests

---

(document
  (list_item
    checkbox: (checkbox)
    (text)))

==================
Checked task uppercase
==================
- [X] Deploy to production

---

(document
  (list_item
    checkbox: (checkbox)
    (text)))

==================
Mixed task list
==================
- [x] Done task
- [ ] Pending task
- [ ] Another pending

---

(document
  (list_item checkbox: (checkbox) (text))
  (list_item checkbox: (checkbox) (text))
  (list_item checkbox: (checkbox) (text)))
