grammars/noted/test/corpus/embeds.txt
==================
Image embed
==================
![[photo.png]]

---

(document
  (paragraph_line
    (embed
      target: (embed_target))))

==================
Note embed
==================
![[Daily Note]]

---

(document
  (paragraph_line
    (embed
      target: (embed_target))))

==================
Embed with path
==================
![[attachments/diagram.svg]]

---

(document
  (paragraph_line
    (embed
      target: (embed_target))))
